Fleet enhancements: consolidated local changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,8 @@
         <li class="nav-item"><a class="nav-link" href="{{ url_for('services') }}">Services</a></li>
       </ul>
       <ul class="navbar-nav ms-auto">
-        {% if session.get('user_id') %}
-        <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+        {% if current_user.is_authenticated %}
+        <li class="nav-item"><a class="nav-link" href="{{ url_for('security.logout') }}">Logout</a></li>
         {% endif %}
       </ul>
     </div>
