--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     {% block custom_css %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -26,6 +29,15 @@
       </ul>
       <ul class="navbar-nav ms-auto">
         {% if current_user.is_authenticated %}
+        {% set is_admin = false %}
+        {% for role in current_user.roles %}
+          {% if role.name == 'admin' %}
+            {% set is_admin = true %}
+          {% endif %}
+        {% endfor %}
+        {% if is_admin %}
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.index') }}">Admin</a></li>
+        {% endif %}
         <li class="nav-item"><a class="nav-link" href="{{ url_for('security.logout') }}">Logout</a></li>
         {% endif %}
       </ul>
@@ -44,5 +56,7 @@
     {% endwith %}
     {% block content %}{% endblock %}
 </div>
+    <!-- Bootstrap 5 JS Bundle (with Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoA6DQD1KQ2U5r1Q9ctPQ5l1j6wZ6Mvo5D5V5d5U5y5Q5v5" crossorigin="anonymous"></script>
 </body>
 </html> 
